--- a/src/app/right-sidebar/right-sidebar.component.html
+++ b/src/app/right-sidebar/right-sidebar.component.html
@@ -1,16 +1,23 @@
 <aside class="right-sidebar">
     <div class="user-info">
-        <i class="fas fa-user-circle profile-picture"></i>
-        <div class="user-details">
-            <p>Malak Ali</p>
-            <span>English Teacher</span>
+        <div class="test">
+
+            <div class="notification"> <i class="fa-regular fa-bell" style="color: #74C0FC;"></i></div>
+            <button class="settings"><i class="fa-solid fa-gear fa-spin"></i></button>
+        </div>
+        <div class="test">
+            <div class="user-details">
+                <p>Malak Ali</p>
+                <span>English Teacher</span>
+            </div>
+            <i class="fas fa-user-circle profile-picture"></i>
         </div>
     </div>
-
+    <!-- ======================================================================================================================================== -->
     <section class="my-progress">
         <div class="progress-header">
             <h3>My Progress</h3>
-            <p>July 2024</p>
+            <span class="bottom-padding"> July 2024</span>
         </div>
         <div class="calendar">
             <div class="days">
@@ -50,13 +57,61 @@
             </div>
         </div>
     </section>
-
+    <!-- ======================================================================================================================================== -->
     <section class="upcoming-activities">
-        <h3>Upcoming Activities</h3>
-        <ul>
-            <li>Returning Student Assessments</li>
-            <li>Grade 4 English Exam</li>
-            <li>Classroom Materials Update</li>
-        </ul>
+        <div class="progress-header">
+        <h5>Upcoming Activities</h5>
+        <span class="bottom-padding">See all</span>
+    </div>
+        <div class="activities">
+            <div class="act1">
+                <div class="circle-icon blue">
+                    <span>8</span>
+                </div>
+                <div class="act-details">
+                    <h5>Returning Student Assessments</h5>
+                    <span>8th - 10th July 2024 <i class="fa-solid fa-circle dot"></i> 8 A.M - 9 A.M</span>
+                    <span>Room 301, Elrashdeen school.</span>
+                </div>
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+            
+            <div class="act2">
+                <div class="circle-icon pink">
+                    <span>13</span>
+                </div>
+                <div class="act-details">
+                    <h5>Grade 4 English Exam</h5>
+                    <span>12th July 2024 <i class="fa-solid fa-circle dot"></i> 10 A.M - 12 P.M</span>
+                    <span>Room 205, Elrashdeen school.</span>
+                </div>
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+            
+            <div class="act3">
+                <div class="circle-icon green">
+                    <span>18</span>
+                </div>
+                <div class="act-details">
+                    <h5>Classroom Materials Update</h5>
+                    <span>18th July 2024 <i class="fa-solid fa-circle dot"></i> 8 A.M - 9 A.M</span>
+                    <span>Upload to Classroom Resources Section.</span>
+                </div>
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+            
+            <div class="act4">
+                <div class="circle-icon orange">
+                    <span>23</span>
+                </div>
+                <div class="act-details">
+                    <h5>Upload Corrected Assignments</h5>
+                    <span>15th July 2024 <i class="fa-solid fa-circle dot"></i> 9 A.M - 11 A.M</span>
+                    <span>Room 101, Elrashdeen school.</span>
+                </div>
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+        </div>
     </section>
+    
 </aside>
