--- a/src/app/sidebar-item/home/home.component.html
+++ b/src/app/sidebar-item/home/home.component.html
@@ -1,32 +1,78 @@
-
-<div class="main-content">
-    <main class="content">
-        <div class="dashboard-cards">
-            <div class="card blue">
-                <h3>+100 Students</h3>
-            </div>
-            <div class="card teal">
-                <h3>6.8 Average Mark</h3>
-            </div>
-            <div class="card pink">
-                <h3>14% Underperforming Students</h3>
+<div class="main-container">
+<div class="box-container">
+    <div class="box1">
+        <div class="cards">
+            <div class="icon-1"><i class="fa-solid fa-users"></i></div>
+            <div class="title">
+                <h5>+100</h5>
+                <p>Students</p>
             </div>
         </div>
-
-        <div class="statistic-chart">
-            <h3>Statistic</h3>
-            <canvas id="myChart"></canvas>
+    </div>
+    <div class="box2">
+        <div class="cards">
+            <div class="icon-2">
+                <i class="fa-solid fa-square-poll-vertical icon-large"></i></div>
+            <div class="title">
+                <h5>6.8</h5>
+                <p>Average Mark</p>
+            </div>
         </div>
-
-        <div class="your-uploads">
-            <h3>Your Uploads</h3>
-            <ul>
-                <li>English-for-beginner.pdf</li>
-                <li>Lessons-Schedule.xls</li>
-                <li>ClassA-Exams.docx</li>
-            </ul>
+    </div>
+    <div class="box3">
+        <div class="cards">
+            <div class="icon-3"><i class="fa-solid fa-arrow-trend-up"></i></div>
+            <div class="title">
+                <h5>14%</h5>
+                <p>Underperforming students</p>
+            </div>
         </div>
-    </main>
+    </div>
+</div>
+<!-- ======================================================================================================================================= -->
+<div class="main-dashboard">
+    <div class="statistics">
+        <div class="title2">
+            <h5>Statistic</h5>
+            <p>
+                < Aug 2021>
+            </p>
+        </div>
+    </div>
+    <div class="your-uploads">
+        <div class="title2">
+            <h5>Your Uploads</h5>
+            <p><a href="./teacher-dashboard/home">View All</a></p>
+        </div>
+    </div>
 
-  
+    </div>
+    <div class="second-dashboard">
+    <div class="top-students">
+        <div class="title2">
+            <h5>Top Students</h5>
+            <p><a href="./teacher-dashboard/home">View All</a></p>
+        </div>
+    </div>
+    <div class="to-do-list">    
+        <div class="title2">
+            <h5>To Do List</h5>
+            <p><a href="./teacher-dashboard/home">View All</a></p>
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Create new task">
+        </div>
+        <div class="checkbox-list">
+            <div class="checkbox-item">
+                <input type="checkbox"><p>Review the lesson objectives for the day</p>
+            </div>
+            <div class="checkbox-item">
+                <input type="checkbox"><p>Review and grade any assignments</p>
+            </div>
+            <div class="checkbox-item">
+                <input type="checkbox"><p>Review the lesson objectives for the day</p>
+            </div>
+        </div>        
+    </div>
+</div>
 </div>
