--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -1,6 +1,8 @@
+<div class="main-container">
 <app-sidebar></app-sidebar>
 <div class="main-content">
   <app-nav-bar></app-nav-bar>
   <router-outlet></router-outlet> 
 </div>
 <app-right-sidebar></app-right-sidebar>
+</div>
