--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <header class="dashboard-header">
     <h1>Dashboard</h1>
     <div class="search-bar">
-        <input type="text" placeholder="Search students, Documents, Activities...">
+        <input type="search" placeholder="Search students, Documents, Activities...">
     </div>
     <div class="theme-toggle">
         <i class="fas fa-sun"  title="Light Mode"></i>
