--- a/src/app/teacher/teacher.component.css
+++ b/src/app/teacher/teacher.component.css
@@ -1,16 +1,29 @@
 :host {
-    display: flex; 
+    display: flex;
 }
 
 app-sidebar {
-    background-color: #fff; 
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); 
+
+}
+
+.main-container {
+    background-color: rgb(233, 236, 240); 
+    display: flex;
+    height: 100%;  
+    width: 100%;
 }
 
 .main-content {
     flex-grow: 1;
-    padding: 10px; 
-    background-color: rgb(233, 236, 240);
+    background-color: rgb(233, 236, 240); 
+    padding: 10px;
+    padding-right: 30px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column; 
 }
+
 
 
