--- a/src/app/right-sidebar/right-sidebar.component.html
+++ b/src/app/right-sidebar/right-sidebar.component.html
@@ -1,18 +1,141 @@
 <aside class="right-sidebar">
     <div class="user-info">
         <div class="test">
+            <div class="notification">
+                <i class="fa-regular fa-bell" style="color: #74C0FC;"></i>
+            </div>
 
-            <div class="notification"> <i class="fa-regular fa-bell" style="color: #74C0FC;"></i></div>
-            <button class="settings"><i class="fa-solid fa-gear fa-spin"></i></button>
+            <button class="settings" data-bs-toggle="modal" data-bs-target="#editUserModal">
+                <i class="fa-solid fa-gear fa-spin"></i>
+            </button>
+
+            <div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editUserModalLabel">Edit Account Information</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
+                                <!-- First Name -->
+                                <div class="mb-3">
+                                    <label for="firstName" class="form-label">First Name</label>
+                                    <input type="text" formControlName="first_name" class="form-control" id="firstName"
+                                        [placeholder]="firstName || 'Enter your first name'">
+                                    <div *ngIf="editForm.get('first_name')?.invalid && (editForm.get('first_name')?.touched || editForm.get('first_name')?.dirty)"
+                                        class="text-danger">
+                                        <small *ngIf="editForm.get('first_name')?.errors?.['required']">First Name is
+                                            required.</small>
+                                        <small *ngIf="editForm.get('first_name')?.errors?.['minlength']">Must be at
+                                            least 3 characters long.</small>
+                                        <small *ngIf="editForm.get('first_name')?.errors?.['pattern']">Only alphabetic
+                                            characters are allowed.</small>
+                                    </div>
+                                </div>
+
+                                <!-- Last Name -->
+                                <div class="mb-3">
+                                    <label for="lastName" class="form-label">Last Name</label>
+                                    <input type="text" formControlName="last_name" class="form-control" id="lastName"
+                                        [placeholder]="lastName || 'Enter your last name'">
+                                    <div *ngIf="editForm.get('last_name')?.invalid && (editForm.get('last_name')?.touched || editForm.get('last_name')?.dirty)"
+                                        class="text-danger">
+                                        <small *ngIf="editForm.get('last_name')?.errors?.['required']">Last Name is
+                                            required.</small>
+                                        <small *ngIf="editForm.get('last_name')?.errors?.['minlength']">Must be at least
+                                            3 characters long.</small>
+                                        <small *ngIf="editForm.get('last_name')?.errors?.['pattern']">Only alphabetic
+                                            characters are allowed.</small>
+                                    </div>
+                                </div>
+
+                                <!-- Email -->
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" formControlName="email" class="form-control" id="email"
+                                        [placeholder]="email || 'Enter your email'">
+                                    <div *ngIf="editForm.get('email')?.invalid && (editForm.get('email')?.touched || editForm.get('email')?.dirty)"
+                                        class="text-danger">
+                                        <small *ngIf="editForm.get('email')?.errors?.['required']">Email is
+                                            required.</small>
+                                        <small *ngIf="editForm.get('email')?.errors?.['email']">Invalid email
+                                            format.</small>
+                                    </div>
+                                </div>
+
+                                <!-- Password -->
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" formControlName="password" class="form-control" id="password"
+                                        placeholder="Enter new password">
+                                    <div *ngIf="editForm.get('password')?.invalid && (editForm.get('password')?.touched || editForm.get('password')?.dirty)"
+                                        class="text-danger">
+                                        <small *ngIf="editForm.get('password')?.errors?.['required']">Password is
+                                            required.</small>
+                                        <small *ngIf="editForm.get('password')?.errors?.['minlength']">Must be at least
+                                            8 characters long.</small>
+                                        <small *ngIf="editForm.get('password')?.errors?.['pattern']">Password must
+                                            include an uppercase letter, a number, and a special character.</small>
+                                    </div>
+                                </div>
+
+                                <!-- Confirm Password -->
+                                <div class="mb-3">
+                                    <label for="password_confirmation" class="form-label">Confirm Password</label>
+                                    <input type="password" formControlName="password_confirmation" class="form-control"
+                                        id="password_confirmation" placeholder="Confirm password">
+                                    <div *ngIf="editForm.get('password_confirmation')?.invalid && (editForm.get('password_confirmation')?.touched || editForm.get('password_confirmation')?.dirty)"
+                                        class="text-danger">
+                                        <small
+                                            *ngIf="editForm.get('password_confirmation')?.errors?.['required']">Password
+                                            confirmation is required.</small>
+                                    </div>
+                                    <p *ngIf="editForm.get('password_confirmation')?.valid && editForm.get('password')?.value === editForm.get('password_confirmation')?.value && editForm.get('password_confirmation')?.touched"
+                                        class="green-check">
+                                        &#10004; Passwords match.
+                                    </p>
+                                </div>
+
+                                <!-- Phone Number -->
+                                <div class="mb-3">
+                                    <label for="phone" class="form-label">Phone Number</label>
+                                    <input type="text" formControlName="phone" class="form-control" id="phone"
+                                        [placeholder]="phone || 'Enter your phone number'">
+                                    <div *ngIf="editForm.get('phone')?.invalid && (editForm.get('phone')?.touched || editForm.get('phone')?.dirty)"
+                                        class="text-danger">
+                                        <small *ngIf="editForm.get('phone')?.errors?.['required']">Phone number is
+                                            required.</small>
+                                        <small *ngIf="editForm.get('phone')?.errors?.['pattern']">Invalid phone number
+                                            format.</small>
+                                    </div>
+                                </div>
+                            </form>
+
+                        </div>
+
+                        <!-- Modal Footer -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" (click)="onSubmit()"
+                                [disabled]="editForm.invalid">Save Changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="test">
             <div class="user-details">
-                <p>Malak Ali</p>
-                <span>English Teacher</span>
+
+                <p>{{ firstName }} {{ lastName }}</p>
+                <span>French Teacher</span>
             </div>
             <i class="fas fa-user-circle profile-picture"></i>
         </div>
     </div>
+
+
     <!-- ======================================================================================================================================== -->
     <section class="my-progress">
         <div class="progress-header">
@@ -60,9 +183,9 @@
     <!-- ======================================================================================================================================== -->
     <section class="upcoming-activities">
         <div class="progress-header">
-        <h5>Upcoming Activities</h5>
-        <span class="bottom-padding">See all</span>
-    </div>
+            <h5>Upcoming Activities</h5>
+            <span class="bottom-padding">See all</span>
+        </div>
         <div class="activities">
             <div class="act1">
                 <div class="circle-icon blue">
@@ -75,7 +198,7 @@
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
-            
+
             <div class="act2">
                 <div class="circle-icon pink">
                     <span>13</span>
@@ -87,7 +210,7 @@
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
-            
+
             <div class="act3">
                 <div class="circle-icon green">
                     <span>18</span>
@@ -99,7 +222,7 @@
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
-            
+
             <div class="act4">
                 <div class="circle-icon orange">
                     <span>23</span>
@@ -113,5 +236,5 @@
             </div>
         </div>
     </section>
-    
+
 </aside>
